--- a/face_recognition/root/templates/classroom.html
+++ b/face_recognition/root/templates/classroom.html
@@ -34,16 +34,12 @@ body{
   display: flex;
 }
 nav {
- 
-  
-
   position: sticky;
   top: 0;
   bottom: 0;
   height: 100vh;
   left: 0;
   width: 90px;
-  /* width: 280px; */
   background: #fff;
   overflow: hidden;
   transition: 1s;
@@ -145,8 +141,8 @@ a:hover{
   width: 160px;
   height: 30px;
   cursor: pointer;
-  text-decoration: none; /* Add this line to remove underline from anchor tag */
-  box-shadow: none; /* Add this line to remove the shadow */
+  text-decoration: none;
+  box-shadow: none; 
 }
 
 .main-skills .card i{
@@ -154,12 +150,6 @@ a:hover{
   padding: 10px;
 }
 
-/* Calander  */
-
-
-/* body {
-  background-color: #fff;
-} */
 .container {
   width: 100%;
   min-height: 100vh;
@@ -255,7 +245,7 @@ a:hover{
 }
 .days .day.day:nth-child(7n) {
   background-color: red;
-  color: white; /* Optional: Change the text color to white for better contrast */
+  color: white; 
 }
 
 .logo {
@@ -265,9 +255,9 @@ a:hover{
 }
 
 .logo img {
-  width: 70px; /* Adjust the width of the image as needed */
-  height: 70px; /* Adjust the height of the image as needed */
-  margin-left: 10px; /* Add some space between the text and image */
+  width: 70px; 
+  height: 70px;
+  margin-left: 10px; 
   border-radius: 50%;
 }
 
@@ -284,7 +274,7 @@ a:hover{
         <html lang="en">
         <head>
           <meta charset="UTF-8" />
-          <title>face Attedance Management system </title>
+          <title>Face Attedance Management system </title>
         
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
         </head>
@@ -301,7 +291,7 @@ a:hover{
                   <i class="fas fa-home"></i>
                   <span class="nav-item">Home</span>
                 </a></li>
-                <li><a href="">
+                <li  style="background-color:#00B3FF;"><a href="">
                   <i class="fas fa-users" aria-hidden="true"></i>
                   <span class="nav-item">Class Room</span>
                 </a></li>
