--- a/face_recognition/root/templates/landing_page.html
+++ b/face_recognition/root/templates/landing_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FA</title>
 
     {% load static %}
 <style>
@@ -117,10 +117,10 @@ header img{
   }
 
   .login-box a button {
-  background-color: #ffffff; /* White background color */
-  color: #000000; /* Black text color */
-  border: 1px solid #ffffff; /* White border color */
-  padding: 10px 20px; /* Adjust padding as needed */
+  background-color: #ffffff; 
+  color: #000000; 
+  border: 1px solid #ffffff; 
+  padding: 10px 20px; 
   font-weight: bold;
   font-size: 16px;
   text-decoration: none;
@@ -133,8 +133,8 @@ header img{
 }
 
 .login-box a button:hover {
-  background-color: #000000; /* Black background color on hover */
-  color: #ffffff; /* White text color on hover */
+  background-color: #000000; 
+  color: #ffffff; 
 }
 
   .login-box a:hover {
@@ -301,7 +301,6 @@ header img{
     </div>
 </div>
   
-      <!-- Include Bootstrap JS (you can adjust the CDN link or use a local copy) -->
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
