--- a/face_recognition/root/templates/register_student.html
+++ b/face_recognition/root/templates/register_student.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Face Attedance Management system</title>
 
-    <!-- Include Bootstrap CSS (you can adjust the CDN link or use a local copy) -->
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <style>
@@ -22,7 +22,7 @@
             border-radius: 8px;
             width: 80%;
             max-width: 500px;
-            height:600px;
+            height:630px;
         }
 
         h1 {
