--- a/face_recognition/root/templates/detailstb.html
+++ b/face_recognition/root/templates/detailstb.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Face Attedance Management system </title>
 </head>
 <link rel="stylesheet" href="tb.css">
 <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
@@ -24,7 +24,6 @@
 .records {
     box-shadow: 0px 5px 5px -5px rgb(0 0 0 / 10%);
     background: #fff;
-    /* background-image:  linear-gradient(to right, #00B3FF , #0062FF); */
     border-radius: 3px;
 }
 
@@ -247,7 +246,7 @@ table tbody tr {
 
         <div>
     <table width="100%">
-        <thead>
+        <thead style="font-family:sans-serif;">
             <tr>
                 <th>Student Id </th>
                 <th> Name</th>
@@ -257,22 +256,22 @@ table tbody tr {
                 
             </tr>
         </thead>
-        <tbody>
+        <tbody style="font-family:sans-serif;">
             {% for student in students %}
-            <tr>
-                <td>{{ student.sid }}</td>
-                <td>
-                    <div class="client">
-                       
-                        <div class="client-info">
-                            <h4>{{ student.name }}</h4>
-                            </div>
-                    </div>
-                </td>
-                <td>{{class_number}}</td>
-                <td>{{student.total_present}}/30</td>
-                <td>{{student.date}}</td>
-            </tr>
+                <tr>
+                    <td>{{ student.sid }}</td>
+                    <td>
+                        <div class="client">
+                        
+                            <div class="client-info">
+                                <h4>{{ student.name }}</h4>
+                                </div>
+                        </div>
+                    </td>
+                    <td>{{class_number}}</td>
+                    <td>{{student.total_present}}/30</td>
+                    <td>{{student.date}}</td>
+                </tr>
 
             {% endfor %}
         </tbody>
